Try to fix width on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,7 @@ body {
     margin: 0;
     overflow-x: hidden;
     overflow-y: scroll;
+    font-size: var(--paragraph-font-size);
     font-family: Inter, sans-serif;
 }
 
